some img add and home

--- a/zphotography.css
+++ b/zphotography.css
@@ -11,6 +11,11 @@
 .col-10{width:83.33%;float:left}
 .col-11{width:91.66%;float:left}
 .col-12{width:100%;float:left}
+
+.container{
+	width:90%;
+	margin: auto;
+}
 /*header css start from here*/
 
 header{
@@ -32,8 +37,10 @@ header .header-menu nav ul li{
 header .header-menu nav ul li a{
 	text-decoration: none;
 	color: #fff;
-	font-family: roboto;
+	font-family: arial;
 	font-weight: 400;
+	text-shadow: 1px 1px blue;
+	font-size: 25px;
 }
 header .header-social-icons{
 	text-align: center;
@@ -43,7 +50,118 @@ header .header-social-icons i{
 	padding: 15px;
 	font-size: 15px;
 	color: #fff;
+	text-shadow: 1px 1px blue;
 }
+#home-top-part .top-name h2{
+	color: #fff;
+	font-family: Cinzel;
+	font-size: 60px;
+	text-align: center;
+	letter-spacing: 10px;
+	text-shadow: 2px 2px blue;
+}
+#home-top-part .top-name h4{
+	color: #fff;
+	font-family: arial;
+	text-align: center;
+	text-shadow: 1px 1px blue;
+}
+/* css for bg img */
+header{
+	position:absolute;
+	top: 0;
+	width: 100%;
+}
+#home-top-part .top-name{
+	position: absolute;
+	z-index: 1;
+	top:400px;
+	left: 30%;
+} 
+#biography-description .biography-box{
+	display: flex;
+	margin-top: 100px;
+	margin-bottom: 100px;
+}
+#biography-description .biography-box .bio-left h3{
+	font-family:roboto ;
+	font-weight: 400;
+	color: #4175fc;
+	letter-spacing: 2px;
+	
+}
+#biography-description .biography-box .bio-left h1{
+	font-family:Cinzel ;
+	font-weight: 400;
+	color: #fff;
+	font-size:30px;
+	letter-spacing: 2px;
+	max-width: 500px;	
+}
+#biography-description .biography-box .bio-right h3{
+	font-family:roboto ;
+	font-weight: 400;
+	color: #fff;
+	line-height: 32px;
+	max-width: 550px;	
+}
+#biography-description .biography-box .bio-right h3 a{
+	text-decoration: none;
+	color: #fff;
+	font-family: cinzel;
+}
+#inventual-info .year-info{
+	padding-right: 50px;
+}
+#inventual-info .year-info h1{
+	font-size: 45px;
+	color: #4175fc;
+	font-family: cinzel;
+	font-weight: 400;
+}
+#inventual-info .year-info h3{
+	font-family: arial;
+	color: #fff;
+	font-weight: 400;
+}
+#inventual-info .year-info h4{
+	font-family: arial;
+	color: #ccc;
+	font-weight: 400;
+	font-size: 18px;
+	overflow: hidden;
+}
+#img-gellary-part .gellary-tittle h3{
+	font-family:roboto ;
+	font-weight: 400;
+	color: #4175fc;
+	letter-spacing: 2px;
+	text-align: center	
+}
+#img-gellary-part .gellary-tittle h2{
+	font-size: 45px;
+	color: #fff;
+	font-family: cinzel;
+	font-weight: 400;
+	text-align: center;
+	max-width: 600px;
+	margin: auto;
+}
+#img-gellary-part .img-gellary{
+	text-align: center;
+	margin-top: 50px;
+}
+#img-gellary-part .img-gellary img{
+	width: 28%;
+	height: 100%;
+	padding: 20px;
+}
+#img-gellary-part .gellary-tittle {
+	
+}
+
+
+
 
 /*Responsive css from here*/
 @media (min-width:320px) and (max-width:480px){
@@ -60,7 +178,7 @@ header .header-social-icons i{
 		float: right;
 	}
 	header .header-menu{
-	text-align: center;
+	text-align: center !important;
 	}
 	header .header-menu nav ul li{
 		padding: 2px;
@@ -72,7 +190,31 @@ header .header-social-icons i{
 	}
 	header .col-2{
 		display: none;
+	}
+	#home-top-part .top-name h2{
+	color: #fff;
+	font-family: Cinzel;
+	font-size: 20px;
+	text-align: center;
+	letter-spacing: 5px
 	}	
+	#home-top-part .top-name h4{
+	color: #fff;
+	font-family: arial;
+	text-align: center;
+	font-size: 10px;
+	}
+	#home-top-part .home-top-bg{
+		text-align: center;
+	}
+	#home-top-part .home-top-bg img{
+		width: 100%;
+		height: 100%;
+	}
+	#home-top-part .top-name{
+	top:110px;
+	left: 24%;
+	} 
 }
 @media (min-width:481px) and (max-width:666px){
 	header{
@@ -99,6 +241,30 @@ header .header-social-icons i{
 	header .col-2{
 		display: none;
 	}	
+	#home-top-part .top-name h2{
+	color: #fff;
+	font-family: Cinzel;
+	font-size: 30px;
+	text-align: center;
+	letter-spacing: 7px
+	}	
+	#home-top-part .top-name h4{
+	color: #fff;
+	font-family: arial;
+	text-align: center;
+	font-size: 12px;
+	}
+	#home-top-part .home-top-bg{
+		text-align: center !important;
+	}
+	#home-top-part .home-top-bg img{
+		width: 100%;
+		height: 100%;
+	}
+	#home-top-part .top-name{
+	top:130px;
+	left: 30%;
+	}
 }
 
 @media (min-width:667px) and (max-width:1024px){
@@ -125,5 +291,29 @@ header .header-social-icons i{
 	}
 	header .col-2{
 		display: none;
+	}
+	#home-top-part .top-name h2{
+	color: #fff;
+	font-family: Cinzel;
+	font-size: 35px;
+	text-align: center;
+	letter-spacing: 10px
+	}	
+	#home-top-part .top-name h4{
+	color: #fff;
+	font-family: arial;
+	text-align: center;
+	font-size: 15px;
+	}
+	#home-top-part .home-top-bg{
+		text-align: center;
+	}
+	#home-top-part .home-top-bg img{
+		width: 100%;
+		height: 100%;
+	}
+	#home-top-part .top-name{
+	top:150px;
+	left: 35%;
 	}	
 }
